--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,4 @@
 
 GENESIS_TOKEN=REDMELON-IAIIPS-CHIPS-GENESIS-TOKEN-002
 NEXT_PUBLIC_GENESIS_TOKEN=REDMELON-IAIIPS-CHIPS-GENESIS-TOKEN-002
+ADMIN_ROLE_TOKEN=CHIPS-ADMIN-ROLE-TOKEN-001
