--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,4 @@
 
-GENESIS_TOKEN=REDMELON-IAIIPS-CHIPS-GENESIS-TOKEN-024
-NEXT_PUBLIC_GENESIS_TOKEN=REDMELON-IAIIPS-CHIPS-GENESIS-TOKEN-024
+GITHUB_CLIENT_ID=your_github_client_id
+GITHUB_CLIENT_SECRET=your_github_client_secret
+GITHUB_REDIRECT_URI=http://localhost:3000/api/auth/github
